# src/main/java/com/example/blps/model/dto/TestDTO.java
@@ -1,0 +1,14 @@
+package com.example.blps.model.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class TestDTO {
+    private Long id;
+    private String name;
+    private Double rate;
+}
